--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@headlessui/react": "^1.7.15",
+        "@heroicons/react": "^2.0.18",
+        "@tailwindcss/forms": "^0.5.3",
         "@types/node": "20.3.1",
         "@types/react": "18.2.13",
         "@types/react-dom": "18.2.6",
@@ -17,9 +20,11 @@
         "eslint-config-next": "13.4.7",
         "framer-motion": "^10.12.17",
         "next": "13.4.7",
+        "next-auth": "^4.22.1",
         "postcss": "8.4.24",
         "react": "18.2.0",
         "react-dom": "18.2.0",
+        "react-hook-form": "^7.45.0",
         "tailwindcss": "3.3.2",
         "typescript": "5.1.3"
     }
