--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dependencies": {
         "@headlessui/react": "^1.7.15",
         "@heroicons/react": "^2.0.18",
+        "@prisma/client": "^4.16.1",
         "@tailwindcss/forms": "^0.5.3",
         "@types/node": "20.3.1",
         "@types/react": "18.2.13",
@@ -27,5 +28,8 @@
         "react-hook-form": "^7.45.0",
         "tailwindcss": "3.3.2",
         "typescript": "5.1.3"
+    },
+    "devDependencies": {
+        "prisma": "^4.16.1"
     }
 }
