--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
         "@heroicons/react": "^2.0.18",
         "@prisma/client": "^4.16.1",
         "@tailwindcss/forms": "^0.5.3",
-        "@types/node": "20.3.1",
+        "@types/bcrypt": "^5.0.0",
+        "@types/node": "^20.3.2",
         "@types/react": "18.2.13",
         "@types/react-dom": "18.2.6",
         "autoprefixer": "10.4.14",
+        "bcrypt": "^5.1.0",
         "eslint": "8.43.0",
         "eslint-config-next": "13.4.7",
         "framer-motion": "^10.12.17",
@@ -26,10 +28,10 @@
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-hook-form": "^7.45.0",
-        "tailwindcss": "3.3.2",
-        "typescript": "5.1.3"
+        "tailwindcss": "3.3.2"
     },
     "devDependencies": {
-        "prisma": "^4.16.1"
+        "prisma": "^4.16.1",
+        "typescript": "^5.1.5"
     }
 }
