--- a/package.json
+++ b/package.json
@@ -13,17 +13,12 @@
         "@heroicons/react": "^2.0.18",
         "@prisma/client": "^4.16.2",
         "@tailwindcss/forms": "^0.5.3",
-        "@types/bcrypt": "^5.0.0",
-        "@types/jsonwebtoken": "^9.0.2",
-        "@types/node": "^20.3.2",
-        "@types/react": "18.2.13",
-        "@types/react-dom": "18.2.6",
         "autoprefixer": "10.4.14",
         "bcrypt": "^5.1.0",
         "eslint": "8.43.0",
         "eslint-config-next": "13.4.7",
         "framer-motion": "^10.12.17",
-        "jsonwebtoken": "^9.0.0",
+        "jose": "^4.14.4",
         "ky": "^0.33.3",
         "next": "13.4.7",
         "postcss": "8.4.24",
@@ -33,6 +28,10 @@
         "tailwindcss": "3.3.2"
     },
     "devDependencies": {
+        "@types/bcrypt": "^5.0.0",
+        "@types/node": "^20.3.3",
+        "@types/react": "^18.2.14",
+        "@types/react-dom": "^18.2.6",
         "prisma": "^4.16.2",
         "typescript": "^5.1.5"
     }
