--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
         "framer-motion": "^10.12.17",
         "jose": "^4.14.4",
         "ky": "^0.33.3",
-        "next": "13.4.7",
+        "next": "^13.4.8",
         "postcss": "8.4.24",
         "react": "18.2.0",
         "react-dom": "18.2.0",
