--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,6 +30,7 @@
         }
     },
     "include": [
+        "types.global.d.ts",
         "next-env.d.ts",
         "**/*.ts",
         "**/*.tsx",
