--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "dependencies": {
         "@headlessui/react": "^1.7.15",
         "@heroicons/react": "^2.0.18",
+        "@hookform/resolvers": "^3.2.0",
         "@reduxjs/toolkit": "^1.9.5",
-        "@tailwindcss/forms": "^0.5.3",
         "autoprefixer": "10.4.14",
         "bcrypt": "^5.1.0",
         "eslint": "8.43.0",
@@ -26,10 +26,12 @@
         "react-dom": "18.2.0",
         "react-hook-form": "^7.45.1",
         "react-redux": "^8.1.1",
-        "tailwindcss": "3.3.2"
+        "tailwindcss": "3.3.2",
+        "yup": "^1.2.0"
     },
     "devDependencies": {
         "@playwright/test": "^1.36.0",
+        "@tailwindcss/forms": "^0.5.4",
         "@types/bcrypt": "^5.0.0",
         "@types/node": "^20.3.3",
         "@types/react": "^18.2.14",
