--- a/package.json
+++ b/package.json
@@ -12,9 +12,16 @@
         "@headlessui/react": "^1.7.15",
         "@heroicons/react": "^2.0.18",
         "@hookform/resolvers": "^3.2.0",
+        "@radix-ui/react-avatar": "^1.0.3",
+        "@radix-ui/react-dropdown-menu": "^2.0.5",
+        "@radix-ui/react-icons": "^1.3.0",
+        "@radix-ui/react-separator": "^1.0.3",
+        "@radix-ui/react-slot": "^1.0.2",
         "@reduxjs/toolkit": "^1.9.5",
         "autoprefixer": "10.4.14",
         "bcrypt": "^5.1.0",
+        "class-variance-authority": "^0.7.0",
+        "clsx": "^2.0.0",
         "eslint": "8.43.0",
         "eslint-config-next": "13.4.7",
         "framer-motion": "^10.12.17",
@@ -26,7 +33,9 @@
         "react-dom": "18.2.0",
         "react-hook-form": "^7.45.1",
         "react-redux": "^8.1.1",
+        "tailwind-merge": "^1.14.0",
         "tailwindcss": "3.3.2",
+        "tailwindcss-animate": "^1.0.6",
         "yup": "^1.2.0"
     },
     "devDependencies": {
