--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
         "@heroicons/react": "^2.0.18",
         "@hookform/resolvers": "^3.2.0",
         "@radix-ui/react-avatar": "^1.0.3",
+        "@radix-ui/react-dialog": "^1.0.4",
         "@radix-ui/react-dropdown-menu": "^2.0.5",
         "@radix-ui/react-icons": "^1.3.0",
         "@radix-ui/react-label": "^2.0.2",
-        "@radix-ui/react-scroll-area": "^1.0.4",
         "@radix-ui/react-select": "^1.2.2",
         "@radix-ui/react-separator": "^1.0.3",
         "@radix-ui/react-slider": "^1.1.2",
@@ -27,12 +27,14 @@
         "bcrypt": "^5.1.0",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.0.0",
+        "cmdk": "^0.2.0",
         "eslint": "8.43.0",
         "eslint-config-next": "13.4.7",
         "framer-motion": "^10.12.17",
         "jose": "^4.14.4",
         "ky": "^0.33.3",
         "next": "^13.4.8",
+        "next-themes": "^0.2.1",
         "postcss": "8.4.24",
         "react": "18.2.0",
         "react-dom": "18.2.0",
