--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
         "@radix-ui/react-icons": "^1.3.0",
         "@radix-ui/react-label": "^2.0.2",
         "@radix-ui/react-popover": "^1.0.6",
+        "@radix-ui/react-radio-group": "^1.1.3",
         "@radix-ui/react-select": "^1.2.2",
         "@radix-ui/react-separator": "^1.0.3",
         "@radix-ui/react-slider": "^1.1.2",
         "@radix-ui/react-slot": "^1.0.2",
         "@radix-ui/react-tabs": "^1.0.4",
-        "@reduxjs/toolkit": "^1.9.5",
         "autoprefixer": "10.4.14",
         "bcrypt": "^5.1.0",
         "class-variance-authority": "^0.7.0",
@@ -41,19 +41,16 @@
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-hook-form": "^7.45.1",
-        "react-redux": "^8.1.1",
         "tailwind-merge": "^1.14.0",
         "tailwindcss": "3.3.2",
         "tailwindcss-animate": "^1.0.6",
         "yup": "^1.2.0"
     },
     "devDependencies": {
-        "@tailwindcss/forms": "^0.5.4",
         "@types/bcrypt": "^5.0.0",
         "@types/node": "^20.3.3",
         "@types/react": "^18.2.14",
         "@types/react-dom": "^18.2.6",
-        "@types/react-redux": "^7.1.25",
         "typescript": "^5.1.5"
     }
 }
